# whitechristmas

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .scalafmt.conf  .yamllint  Makefile  README.md  config.yaml  docker-compose.yml  flake.nix  lefthook.yml  run.md  shell.nix  treefmt.toml
docker/: alert_rules.yml  prometheus.yml
docker/grafana/dashboards/: whitechristmas.json
docker/grafana/provisioning/dashboards/: whitechristmas.yml
report/: .gitignore  main.tex
scripts/: grafana-start.sh  grafana-stop.sh  kafka-start.sh  kafka-stop.sh  prometheus-start.sh  prometheus-stop.sh  prometheus.yml  schema-registry-start.sh  schema-registry-stop.sh
src/api/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
src/frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/components/: DistrictMap.tsx
src/kafka-producer/: Cargo.toml  Dockerfile  go.mod  main.go
src/kafka-producer/src/: main.rs
src/schemas/: crime-event.avsc
src/spark-jobs/: .dockerignore  Dockerfile  build.sbt  log4j2.properties
src/spark-jobs/src/main/scala/com/whitechristmas/spark/: BatchAnalytics.scala  BoltPipeline.scala  Pipeline.scala  StreamProcessor.scala
tests/: e2e-test.sh
