[package]
name = "whitechristmas-producer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/main.rs"

[dependencies]
rdkafka = { version = "0.37", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
csv = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
