[package]
name = "whitechristmas-producer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/main.rs"

[dependencies]
rdkafka = { version = "0.37", features = ["cmake-build"] }
apache-avro = { version = "0.17", features = ["snappy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
csv = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
